frontend-app/kubernetes/webapp-frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webapp-frontend
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: webapp-frontend
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
