frontend-app/kubernetes/webapp-frontend-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webapp-frontend-ingress
  annotations:
    acme.cert-manager.io/http01-edit-in-place: 'true'
    cert-manager.io/cluster-issuer: le-prod-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - webapp.frederikkrogh.dk
      secretName: tls-webapp-secret
  rules:
    - host: webapp.frederikkrogh.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-frontend
                port:
                  number: 80
